// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vite-plugin-jsx > distinguishes between properties (.) and attributes 1`] = `
"import { html } from "@inglorious/web";
const App = () => html\`<my-element id=\${id} class=\${cls} aria-label=\${label} data-test=\${test} .someProp=\${value} .complexData=\${obj}></my-element>\`;"
`;

exports[`vite-plugin-jsx > handles boolean attributes 1`] = `
"import { html } from "@inglorious/web";
html\`<input disabled checked readonly></input>\`;"
`;

exports[`vite-plugin-jsx > handles event listeners (@event syntax) 1`] = `
"import { html } from "@inglorious/web";
html\`<button @click=\${handleClick} @mouseover=\${() => {}}>Click</button>\`;"
`;

exports[`vite-plugin-jsx > handles fragments 1`] = `
"import { html } from "@inglorious/web";
const List = () => html\`
          \${html\`<li>A</li>\`}
          \${html\`<li>B</li>\`}
        \`;"
`;

exports[`vite-plugin-jsx > handles nested expressions and elements 1`] = `
"import { html } from "@inglorious/web";
const App = () => html\`<div>\${show ? html\`<span>Visible</span>\` : null}</div>\`;"
`;

exports[`vite-plugin-jsx > transforms basic JSX elements 1`] = `
"import { html } from "@inglorious/web";
export const App = () => html\`<div>Hello World</div>\`;"
`;

exports[`vite-plugin-jsx > transforms className to class 1`] = `
"import { html } from "@inglorious/web";
html\`<div class="container">Content</div>\`;"
`;
